--- a/doc/docu.wiki
+++ b/doc/docu.wiki
@@ -15,7 +15,7 @@ RESTfooly needs a HTTP Server and PHP. To install RESTfooly do:
 
 
 {{{
-$ wget http://RESTfooly.org/downloads/RESTfooly-0.1.tar.gz
+$ wget https://restfooly.googlecode.com/files/restfooly-0.1.tar.gz
 $ tar xzvf RESTfooly-0.1.tar.gz
 }}}
 
@@ -41,7 +41,7 @@ RewriteRule ^.*$  handler.php [L]
 
 ==Test==
 
-RESTfooly includes unit tests. The presence of [http://www.simpletest.org simpletest] is recommended. To download simpletest and execute the tests do:
+RESTfooly includes unit tests. To execute the tests [http://www.simpletest.org simpletest] is needed. To download simpletest and execute the tests do:
 
 
 {{{
@@ -153,7 +153,7 @@ Use HTTP GET-method to query members (objects) of a collection (with a given url
 
 
 {{{
-GET /resources/annotations?url=http://www.example.org/article2 HTTP/1.1^M
+GET /resources/annotations?url=http://www.example.org/article2 HTTP/1.1
 Host: 127.0.0.1
 Connection: Close
 
