--- a/trunk/doc/docu.wiki
+++ b/trunk/doc/docu.wiki
@@ -16,7 +16,7 @@ RESTfooly needs a HTTP Server and PHP. To install RESTfooly do:
 
 {{{
 $ wget https://restfooly.googlecode.com/files/restfooly-0.1.tar.gz
-$ tar xzvf restfooy-0.1.tar.gz
+$ tar xzvf restfooly-0.1.tar.gz
 }}}
 
 If using Apache HTTP Server mod_rewrite must be enabled. To configure the Apache HTTP Server, when PHP is used as module, place the following to the end of your httpd.conf or inside a virtual host configuration anywhere.
